force-app/main/default/objects/Customer_Tax_Category__c/Customer_Tax_Category__c.object-meta.xml
<CustomObject>
    <label>Customer Tax Category</label>
    <nameField>
        <displayFormat>CTC-{000000}</displayFormat>
        <label>Customer Tax Category Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>