force-app/main/default/objects/Customer_Tax_Category__c/fields/Country_District__c.field-meta.xml
<CustomField>
    <fullName>Country_District__c</fullName>
    <formula>Tax_Category_Master_Data__r.Country_District__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country/District</label>
    <type>Text</type>
</CustomField>