force-app/main/default/objects/Customer_Tax_Category__c/fields/Is_Sync__c.field-meta.xml
<CustomField>
    <fullName>Is_Sync__c</fullName>
    <formula>Sales_View__r.isSync__c</formula>
    <label>Synced to SAP</label>
    <type>Checkbox</type>
</CustomField>