force-app/main/default/objects/Customer_Tax_Category__c/fields/Sales_View__c.field-meta.xml
<CustomField>
    <fullName>Sales_View__c</fullName>
    <label>Sales View</label>
    <referenceTo>Customer_Sales_Info__c</referenceTo>
    <relationshipLabel>Customer Tax Category</relationshipLabel>
    <relationshipName>Customer_Tax_Category</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>