force-app/main/default/objects/Customer_Tax_Category__c/fields/Tax_Category__c.field-meta.xml
<CustomField>
    <fullName>Tax_Category__c</fullName>
    <label>Tax Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tax_Category_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Tax_Category</valueSetName>
    </valueSet>
</CustomField>