force-app/main/default/objects/Customer_Tax_Category__c/fields/Tax_Category_Master_Data__c.field-meta.xml
<CustomField>
    <fullName>Tax_Category_Master_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Category Master Data</label>
    <referenceTo>Tax_Category_Master_Data__c</referenceTo>
    <relationshipLabel>Customer Tax Category</relationshipLabel>
    <relationshipName>Customer_Tax_Category</relationshipName>
    <type>Lookup</type>
</CustomField>