force-app/main/default/objects/Customer_Tax_Category__c/fields/Tax_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Tax_Category_Name__c</fullName>
    <formula>Tax_Category_Master_Data__r.Tax_Category_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Category Name</label>
    <type>Text</type>
</CustomField>