force-app/main/default/objects/Customer_Tax_Category__c/fields/Tax_Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Category_Type__c</fullName>
    <label>Tax Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tax_Category_Type</valueSetName>
    </valueSet>
</CustomField>